syntax = "proto3";
package cheetah.matches.factory.internal;

import public "matches.registry.internal.proto";

service Factory {
  /**
    Создание матча на свободном Relay сервере
   */
  rpc CreateMatch(CreateMatchRequest) returns(CreateMatchResponse);
}

message CreateMatchRequest {
  string template = 1;
}

message CreateMatchResponse {
  cheetah.matches.registry.internal.RelayAddrs addrs = 1;
  uint64 id = 2;
}
